# pyoniip

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  unpinned_requirements.txt
.github/workflows/: conda.yml  pip.yml  wheels.yml
docs/: Makefile  conf.py  index.rst  make.bat  pyoniip.rst
src/: main.cpp
test/: test.py
